examples/qualification/executable_module_entry/negative_transitive_duplicate_symbol_collision/src/right.sm
Import "beta.sm"

fn right_score() -> i32 {
    return beta_score();
}
